Add content for Import in Help

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -188,4 +188,23 @@
     <string name="sort_by_age_desc">Period &amp; Year, descending</string>
     <string name="sort_by_archival_oldest">Earliest archival</string>
     <string name="sort_by_archival_newest">Most recent archival</string>
+    <string name="help_page_not_translated">" "</string>
+    <string name="help_import_p1" translatable="false">You can add multiple plates at once by importing a CSV file.</string>
+    <string name="help_import_p2" translatable="false">In order for the import to succeed, the file needs to follow a specific format and guidelines.</string>
+    <string name="help_import_p3" translatable="false">The first row of the file should contain the following values in the same exact order, separated by commas.</string>
+    <string name="help_import_p4" translatable="false">All subsequent rows should be equal in length to the first row, whether or not all the fields are filled with data or not.</string>
+    <string name="help_import_p5" translatable="false">An empty row with no data would therefore be represented as 24 commas, i.e. ,,,,,,,,,,,,,,,,,,,,,,,,</string>
+    <string name="help_import_p6" translatable="false">You can download a template CSV file to help you get started with importing. The template consists of the first row and a single empty row.</string>
+    <string name="help_import_p7" translatable="false">You can also prepare a CSV file for import by utilizing any spreadsheet software that allows saving tables as CSV files. Just make sure the first row contains all the values as specified above, and fill in your data on the subsequent rows.</string>
+    <string name="import_copy_first_row" translatable="false">Copy the first row</string>
+    <string name="import_copy_empty_row" translatable="false">Copy an empty row</string>
+    <string name="import_download_template" translatable="false">Download template</string>
+    <string name="import_show_first_row" translatable="false">Show values</string>
+    <string name="attention">Pay attention</string>
+    <string name="info_date_format">The recommended date format is \"YYYY-MM-DD\", e.g. <xliff:g name="date_example" example="1917-12-06">%s</xliff:g></string>
+    <string name="info_width">The display size of the plate is determined by comparing the width to other plates.</string>
+    <string name="help_import_currency" translatable="false">Currency values should be entered in their smallest respective unit, without decimal or thousands separators, e.g.</string>
+    <string name="help_import_currency_with_decimal" translatable="false">USD, with cents as a subunit\n$1.00 as 100\n$1,400.99 as 140099</string>
+    <string name="help_import_currency_non_decimal" translatable="false">JPY, without a subunit\n¥1 as 1\n¥12,500 as 12500</string>
+    <string name="help_import_other_numerals" translatable="false">Other numeral values – such as measurements like width – should also be entered as integers only, without any decimals or punctuation.</string>
 </resources>
