Implement functionalities for ImportPage in HelpScreen. Ability to copy FirstRow and EmptyRow to clipboard. Ability to download a template CSV file for import

--- a/app/src/main/res/values-fi/strings.xml
+++ b/app/src/main/res/values-fi/strings.xml
@@ -186,4 +186,6 @@
     <string name="attention">Huomioi</string>
     <string name="info_date_format">Päiväyksiin suositellaan käytettävän muotoa \"VVVV-KK-PP\", esim. <xliff:g name="date_example" example="1917-12-06">%s</xliff:g></string>
     <string name="info_width">Kilven koko kataloginäkymässä määräytyy vertaamalla leveyttä muihin kilpiin.</string>
+    <string name="download_msg_success">Lataus onnistui</string>
+    <string name="download_msg_failure">Lataus epäonnistui</string>
 </resources>
