--- a/app/src/main/res/values-ja/strings.xml
+++ b/app/src/main/res/values-ja/strings.xml
@@ -182,4 +182,6 @@
     <string name="attention">注意</string>
     <string name="info_date_format">おすすめの日付表現は「YYYY-MM-DD」。例えば、<xliff:g name="date_example" example="1917-12-06">%s</xliff:g></string>
     <string name="info_width">プレートの表示サイズは、他のプレートの横幅との比較で決定されます。</string>
+    <string name="download_msg_success">ダウンロードが完成しました</string>
+    <string name="download_msg_failure">ダウンロードが失敗しました</string>
 </resources>
