--- a/app/src/main/res/values-fi/strings.xml
+++ b/app/src/main/res/values-fi/strings.xml
@@ -193,4 +193,6 @@
     <string name="selected_collection">Valittu kokoelma</string>
     <string name="current_selection">Nykyinen valinta</string>
     <string name="cost_per_plate">"Per kilpi: "</string>
+    <string name="clear">Tyhjennä</string>
+    <string name="punctuation_colon">": "</string>
 </resources>
