Improve TopRow stability. Include FAB in HomeScreen when in collection with appropriate on click feedback

--- a/app/src/main/res/values-fi/strings.xml
+++ b/app/src/main/res/values-fi/strings.xml
@@ -194,4 +194,5 @@
     <string name="cost_per_plate">Per kilpi</string>
     <string name="clear">Tyhjennä</string>
     <string name="punctuation_colon">": "</string>
+    <string name="add_plate_redirect_msg">Lisätäksesi kilpiä, mene \"Kaikki kilvet\" -näkymään</string>
 </resources>
