--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -220,4 +220,5 @@
     <string name="clear">Clear</string>
     <string name="punctuation_colon">": "</string>
     <string name="not_applicable" translatable="false">N/A</string>
+    <string name="add_plate_redirect_msg">To add plates, go to \"All plates\"</string>
 </resources>
