--- a/app/src/main/res/values-ja/strings.xml
+++ b/app/src/main/res/values-ja/strings.xml
@@ -190,4 +190,5 @@
     <string name="cost_per_plate">一枚あたり</string>
     <string name="clear">クリア</string>
     <string name="punctuation_colon">：</string>
+    <string name="add_plate_redirect_msg">プレートを追加には、「すべてのプレート」へ移動してください</string>
 </resources>
