Add info text for costs in Stats. Improve paste functionality in ItemEntry. Unify color of FABs in Home, Wishlist, and Archive

--- a/app/src/main/res/values-fi/strings.xml
+++ b/app/src/main/res/values-fi/strings.xml
@@ -195,4 +195,5 @@
     <string name="clear">Tyhjennä</string>
     <string name="punctuation_colon">": "</string>
     <string name="add_plate_redirect_msg">Lisätäksesi kilpiä, mene \"Kaikki kilvet\" -näkymään</string>
+    <string name="info_stats_cost">Brutto =\nkaikkien kilpien + arkiston menot\n\nNetto =\nbrutto - arkiston hinnat</string>
 </resources>
