--- a/app/src/main/res/values-ja/strings.xml
+++ b/app/src/main/res/values-ja/strings.xml
@@ -191,4 +191,5 @@
     <string name="clear">クリア</string>
     <string name="punctuation_colon">：</string>
     <string name="add_plate_redirect_msg">プレートを追加には、「すべてのプレート」へ移動してください</string>
+    <string name="info_stats_cost">総額 =\n「すべてのプレート」+「アーカイブ」の費用\n\n正味 =\n「総額」–「アーカイブ」の価格</string>
 </resources>
