--- a/app/src/main/res/values-fi/strings.xml
+++ b/app/src/main/res/values-fi/strings.xml
@@ -195,4 +195,6 @@
     <string name="punctuation_colon">": "</string>
     <string name="add_plate_redirect_msg">Lisätäksesi kilpiä, mene \"Kaikki kilvet\" -näkymään</string>
     <string name="info_stats_cost">Brutto =\nkaikkien kilpien + arkiston menot\n\nNetto =\nbrutto - arkiston hinnat</string>
+    <string name="deletion_message_wishlist">Poistettu toivelistalta</string>
+    <string name="deletion_message_plate"><xliff:g name="reg_no" example="ABC-123">%s</xliff:g> on poistettu</string>
 </resources>
