--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -238,4 +238,6 @@
     <string name="hide_values_all_plates" translatable="false">Hide \"All plates\" unused values</string>
     <string name="hide_values_archive" translatable="false">Hide \"Archive\" unused values</string>
     <string name="hide_values_wishlist" translatable="false">Hide \"Wishlist\" used values</string>
+    <string name="deletion_message_wishlist">Wishlist entry deleted</string>
+    <string name="deletion_message_plate"><xliff:g name="reg_no" example="ABC-123">%s</xliff:g> has been deleted</string>
 </resources>
