--- a/app/src/main/res/values-fi/strings.xml
+++ b/app/src/main/res/values-fi/strings.xml
@@ -197,4 +197,9 @@
     <string name="info_stats_cost">Brutto =\nkaikkien kilpien + arkiston menot\n\nNetto =\nbrutto - arkiston hinnat</string>
     <string name="deletion_message_wishlist">Poistettu toivelistalta</string>
     <string name="deletion_message_plate"><xliff:g name="reg_no" example="ABC-123">%s</xliff:g> on poistettu</string>
+    <string name="copied_to_clipboard">Kopioitu leikepöydälle</string>
+    <string name="paste_success">Liitetty</string>
+    <string name="paste_failure">Liittäminen epäonnistui</string>
+    <string name="copied">Kopioitu</string>
+    <string name="pasted">Liitetty</string>
 </resources>
