--- a/app/src/main/res/values-ja/strings.xml
+++ b/app/src/main/res/values-ja/strings.xml
@@ -193,4 +193,9 @@
     <string name="info_stats_cost">総額 =\n「すべてのプレート」+「アーカイブ」の費用\n\n正味 =\n「総額」–「アーカイブ」の価格</string>
     <string name="deletion_message_wishlist">欲しい物は削除されました</string>
     <string name="deletion_message_plate">｢<xliff:g name="reg_no" example="ABC-123">%s</xliff:g>｣ が削除されました</string>
+    <string name="copied_to_clipboard">クリップボードにコピーしました</string>
+    <string name="paste_success">貼り付けました</string>
+    <string name="paste_failure">貼り付けが失敗しました</string>
+    <string name="copied">コピーしました</string>
+    <string name="pasted">貼り付けました</string>
 </resources>
