--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -240,4 +240,9 @@
     <string name="hide_values_wishlist" translatable="false">Hide \"Wishlist\" used values</string>
     <string name="deletion_message_wishlist">Wishlist entry deleted</string>
     <string name="deletion_message_plate"><xliff:g name="reg_no" example="ABC-123">%s</xliff:g> has been deleted</string>
+    <string name="copied_to_clipboard">Copied to clipboard</string>
+    <string name="paste_success">Pasted</string>
+    <string name="paste_failure">Pasting failed</string>
+    <string name="copied">Copied</string>
+    <string name="pasted">Pasted</string>
 </resources>
