--- a/app/src/main/res/values-fi/strings.xml
+++ b/app/src/main/res/values-fi/strings.xml
@@ -202,4 +202,8 @@
     <string name="paste_failure">Liittäminen epäonnistui</string>
     <string name="copied">Kopioitu</string>
     <string name="pasted">Liitetty</string>
+    <string name="saved_new_item"><xliff:g name="reg_no" example="ABC-123">%s</xliff:g> lisätty</string>
+    <string name="saved_old_item"><xliff:g name="reg_no" example="ABC-123">%s</xliff:g> tallennettu</string>
+    <string name="saved_new_collection"><xliff:g name="collection_name" example="Collection">%s</xliff:g> on luotu</string>
+    <string name="save_new_collection">Luo <xliff:g name="collection_name" example="Collection">%s</xliff:g></string>
 </resources>
