--- a/app/src/main/res/values-ja/strings.xml
+++ b/app/src/main/res/values-ja/strings.xml
@@ -198,4 +198,8 @@
     <string name="paste_failure">貼り付けが失敗しました</string>
     <string name="copied">コピーしました</string>
     <string name="pasted">貼り付けました</string>
+    <string name="saved_new_item">｢<xliff:g name="reg_no" example="ABC-123">%s</xliff:g>｣ を作成しました</string>
+    <string name="saved_old_item">｢<xliff:g name="reg_no" example="ABC-123">%s</xliff:g>｣ を保存しました</string>
+    <string name="saved_new_collection">｢<xliff:g name="collection_name" example="Collection">%s</xliff:g>｣ を作成されました</string>
+    <string name="save_new_collection">｢<xliff:g name="collection_name" example="Collection">%s</xliff:g>｣ を作成</string>
 </resources>
