--- a/app/src/main/res/values-fi/strings.xml
+++ b/app/src/main/res/values-fi/strings.xml
@@ -206,4 +206,6 @@
     <string name="saved_old_item"><xliff:g name="reg_no" example="ABC-123">%s</xliff:g> tallennettu</string>
     <string name="saved_new_collection"><xliff:g name="collection_name" example="Collection">%s</xliff:g> on luotu</string>
     <string name="save_new_collection">Luo <xliff:g name="collection_name" example="Collection">%s</xliff:g></string>
+    <string name="saved_to_wishlist">Lisätty toivelistalle</string>
+    <string name="saved_generic">Tallennettu</string>
 </resources>
