--- a/app/src/main/res/values-ja/strings.xml
+++ b/app/src/main/res/values-ja/strings.xml
@@ -202,4 +202,6 @@
     <string name="saved_old_item">｢<xliff:g name="reg_no" example="ABC-123">%s</xliff:g>｣ を保存しました</string>
     <string name="saved_new_collection">｢<xliff:g name="collection_name" example="Collection">%s</xliff:g>｣ を作成されました</string>
     <string name="save_new_collection">｢<xliff:g name="collection_name" example="Collection">%s</xliff:g>｣ を作成</string>
+    <string name="saved_to_wishlist">欲しい物を作成しました</string>
+    <string name="saved_generic">保存しました</string>
 </resources>
