--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -245,8 +245,10 @@
     <string name="paste_failure">Pasting failed</string>
     <string name="copied">Copied</string>
     <string name="pasted">Pasted</string>
-    <string name="saved_new_item">Added <xliff:g name="reg_no" example="ABC-123">%s</xliff:g></string>
-    <string name="saved_old_item">Saved <xliff:g name="reg_no" example="ABC-123">%s</xliff:g></string>
+    <string name="saved_new_item"><xliff:g name="reg_no" example="ABC-123">%s</xliff:g> added</string>
+    <string name="saved_old_item"><xliff:g name="reg_no" example="ABC-123">%s</xliff:g> saved</string>
     <string name="saved_new_collection"><xliff:g name="collection_name" example="Collection">%s</xliff:g> has been created</string>
     <string name="save_new_collection">Create <xliff:g name="collection_name" example="Collection">%s</xliff:g></string>
+    <string name="saved_to_wishlist">Added to wishlist</string>
+    <string name="saved_generic">Saved</string>
 </resources>
