--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -251,4 +251,11 @@
     <string name="save_new_collection">Create <xliff:g name="collection_name" example="Collection">%s</xliff:g></string>
     <string name="saved_to_wishlist">Added to wishlist</string>
     <string name="saved_generic">Saved</string>
+    <string name="help_and_feedback">Help &amp; feedback</string>
+    <string name="privacy_policy">Privacy policy</string>
+    <string name="send_feedback">Send feedback</string>
+    <string name="rate">Rate</string>
+    <string name="review">Review</string>
+    <string name="rate_and_review">Rate &amp; review</string>
+    <string name="give_feedback">Give feedback</string>
 </resources>
