--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -191,9 +191,9 @@
     <string name="help_import_a_p1" translatable="false">You can add multiple plates at once by importing a CSV file.</string>
     <string name="help_import_a_p2" translatable="false">In order for the import to succeed, the file needs to follow a specific format and guidelines.</string>
     <string name="help_import_first_row_p1" translatable="false">The first row of the file should contain the following values in the same exact order. Some of the values might slightly differ from their equivalent namesake.</string>
-    <string name="help_import_p4" translatable="false">All subsequent rows should be equal in length to the first row, whether or not all the values are filled with data or not.</string>
+    <string name="help_import_p4" translatable="false">All subsequent rows should be equal in length to the first row, whether or not all the values are used and filled with data or not.</string>
     <string name="help_import_a_p3" translatable="false">A single row for import should always consist of 32 values – as specified further below – separated by 31 commas.</string>
-    <string name="help_import_p6" translatable="false">You can download a template CSV file to help you get started with importing. The template consists of the first row, and a single empty row.</string>
+    <string name="help_import_p6" translatable="false">You can download a CSV file template to help you get started with importing. The template consists of the first row, and a single empty row.</string>
     <string name="help_import_p7" translatable="false">You can also prepare a CSV file for import by utilizing any spreadsheet software that allows saving tables as CSV files. Just make sure the first row contains all the values as specified above, and fill in your data on the subsequent rows.</string>
     <string name="import_copy_first_row" translatable="false">Copy the first row</string>
     <string name="import_copy_empty_row" translatable="false">Copy an empty row</string>
@@ -201,7 +201,7 @@
     <string name="import_show_first_row" translatable="false">Show values</string>
     <string name="attention">Pay attention</string>
     <string name="info_date_format" translatable="false">Dates have to be entered in the \"YYYY-MM-DD\" format, e.g. <xliff:g name="date_example" example="1917-12-06">%s</xliff:g></string>
-    <string name="info_width">The display size of the plate is determined by comparing the width to other plates.</string>
+    <string name="info_width">Width is used to determine the display size of plates in the catalog view.</string>
     <string name="help_import_currency" translatable="false">Currency values should be entered in their smallest respective unit, without any decimal or thousands separators, e.g.</string>
     <string name="help_import_currency_with_decimal" translatable="false">USD, with cents as a subunit\n$1.00 as 100\n$1,400.99 as 140099</string>
     <string name="help_import_currency_non_decimal" translatable="false">JPY, without a subunit\n¥1 as 1\n¥12,500 as 12500</string>
@@ -259,6 +259,12 @@
     <string name="rate_and_review">Rate &amp; review</string>
     <string name="give_feedback">Give feedback</string>
     <string name="open_url_error">Unable to open the link</string>
-    <string name="url_redirect_to_browser">This content is available online. You will be redirected to your web browser.</string>
+    <string name="url_redirect_to_browser">This content is available online. You will be redirected to your browser.</string>
     <string name="url_redirect_to_google_play">You will be redirected to the Google Play Store.</string>
+    <string name="info_region_1st">When sorting by country, it is supplemented by subdivision.</string>
+    <string name="redirect_to_feedback_supporting_text">"Found an error? Thought of an improvement? Send feedback!"</string>
+    <string name="redirect_to_google_play_supporting_text">Enjoy using Rekkary? Leave a rating!</string>
+    <string name="url_redirect_to_feedback">Found an error? Thought of an improvement? Send feedback!\n\nYou will be redirected to your browser for an online feedback form.</string>
+    <string name="url_redirect_to_rating">Enjoy using Rekkary? Please leave a rating!\n\nYou will be redirected to the Google Play Store.</string>
+    <string name="deletion_dialog_collection">Deleting a collection removes it from all plates. This action cannot be undone. Any plates will not be deleted.</string>
 </resources>
