--- a/app/src/main/res/values-fi/strings.xml
+++ b/app/src/main/res/values-fi/strings.xml
@@ -224,4 +224,5 @@
     <string name="url_redirect_to_feedback">Oletko löytänyt virheen? Keksitkö jotain parannettavaa? Lähetä palautetta!\n\nSinut ohjataan selaimeen palautelomakkeen avaamista varten.</string>
     <string name="url_redirect_to_rating">Pidätkö Rekkarysta? Käy antamassa sille arvostelu!\n\nSinut ohjataan seuraavaksi Google Play -kauppaan.</string>
     <string name="deletion_dialog_collection">Kokoelma poistetaan ja se poistuu kaikista kilvistä. Tätä toimintoa ei voi kumota. Yhtäkään kilpeä ei poisteta.</string>
+    <string name="no_data">Ei dataa</string>
 </resources>
