--- a/app/src/main/res/values-ja/strings.xml
+++ b/app/src/main/res/values-ja/strings.xml
@@ -220,4 +220,5 @@
     <string name="url_redirect_to_feedback">誤りに気づきましたか？改善についてご提案がありますか？どうか、フィードバックを送信してください。\n\nこの先ウェブブラウザに遷移します。</string>
     <string name="url_redirect_to_rating">Rekkary のことを気に入っていますか？是非、評価してください。\n\nこの先Google Play ストアに遷移します。</string>
     <string name="deletion_dialog_collection">コレクションを削除すると、全てのプレートから削除されます。削除したら、元に戻せません。プレートは削除されません。</string>
+    <string name="no_data">データなし</string>
 </resources>
