Modify SettingsScreen visuals. Revert TopRow OutlinedButton colors back to normal after updating dependencies. Add instructions in relation to measurements in import help

--- a/app/src/main/res/values-fi/strings.xml
+++ b/app/src/main/res/values-fi/strings.xml
@@ -230,4 +230,5 @@
     <string name="measurement_weight">Paino</string>
     <string name="measurement_width">Leveys</string>
     <string name="measurement_height">Korkeus</string>
+    <string name="settings_general">Yleiset</string>
 </resources>
